<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="april.lesincs.rxjava.MainActivity"
        tools:showIn="@layout/app_bar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <april.lesincs.rxjava.RoundRectangleView
                android:layout_width="3dp"
                android:layout_height="17dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/operator"
                android:textSize="@dimen/title_text_size"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_operator_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="21dp" />

        <TextView
            android:id="@+id/tv_operator_short_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <april.lesincs.rxjava.RoundRectangleView
                android:layout_width="3dp"
                android:layout_height="17dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/gem_img"
                android:textSize="@dimen/title_text_size"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_gem_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/operator_create" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <april.lesincs.rxjava.RoundRectangleView
                android:layout_width="3dp"
                android:layout_height="17dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/title_text_size"
                android:text="@string/official_explain"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_official_explain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <april.lesincs.rxjava.RoundRectangleView
                android:layout_width="3dp"
                android:layout_height="17dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/title_text_size"
                android:text="@string/code_in_action"
                android:textColor="@android:color/secondary_text_light" />
        </LinearLayout>

        <WebView
            android:id="@+id/codeView"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </WebView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>